--- a/styles/styles.css
+++ b/styles/styles.css
@@ -95,7 +95,6 @@ p {
     text-transform: uppercase;
     letter-spacing: .04em;
     text-align: left;
-    display: inline-block;
 }
 
 .header-slogan .title,
@@ -128,7 +127,11 @@ p {
         margin-left: 10.8rem;
     }
 }
-
+@media (max-width: 1279px) {
+    .header-slogan{
+        display: inline-block;
+    }
+}
 @media (min-width: 1280px) {
     .header-slogan {
         font-size: 9rem;
